--- a/create_nova/requirements.txt
+++ b/create_nova/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.7.2
-click==8.1.7
 Django==3.2
-pillow==10.2.0
+gunicorn
+dj-database-url
+whitenoise
+django-heroku
 python-dotenv==1.0.1
 sqlparse==0.4.4
-svgwrite==1.4.3
-Tree==0.2.4
+Pillow
